--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
     <title>ToDo List App</title>
 </head>
 
